# BattleShip

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/: CODEOWNERS
src/: main.c
src/asst/: Logo.txt  asst.c  asst.h  bot.c  bot.h
